--- a/index.html
+++ b/index.html
@@ -2,63 +2,88 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Comaptible" content="IE=edge">
     <title>Hotel Landing Page</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <nav class="navbar navbar-expan-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"><span style="color: rgb(235, 164, 32);">Zu</span>Travel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span navbar-toggler-icon></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
+      
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Stories</a>
-                </li>
-                <li class="nav-item">
-                    <a  class="nav-link" href="#">Books</a></li>
-                <li class="nav-item">
-                    <a  class="nav-link" href="">Contact</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Searh Destinatons...">
-            </form>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Stories</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Book</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search Destination..." aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"></button>
+          </form>
         </div>
-        <p class="nav-brand"><span style="color: rgb(235, 164, 32);" Zu</span></span>Travel</p>
+      </nav>
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="overhead_bridge.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
+                <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
+                <a href="#" class="btn btn-default btn-sm" role="button"><b>EXPLORE DESTINATION</b></a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src=".." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
 
-    </nav>
-        <!--<nav class="navbar navbar-default navbar-expand-md">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <ul class="nav navbar-nav">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Stories</a></li>
-                <li><a href="">Books</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-            <div class="navbar-brand ml-10">
-                <h5><span style="color:rgb(235, 164, 32)">Zu</span>Travels</h5>
-            </div>
-            <div class="nav navbar-nav navbar-right float-lg-right">
-                <input type="search" class="head_search" placeholder="search">
-            </div>
-        </nav>-->
+
+    <!--
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 img-fluid">
                     <img src="overhead_bridge.png">
                 </div>
                 <div class="carousel-caption">
@@ -67,26 +92,11 @@
                     <a href="#" class="btn btn-default btn-sm" role="button"><b>EXPLORE DESTINATION</b></a>
                 </div>
             </div>
-        
-        <!--<div id="the Carousel" class="carousel slide" data-ride="carousel">
-            <ol class="crousel-indicators">
-                <li data-target="#theCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#theCarousel" data-slide-to="1"></li>
-                <li data-target="#theCarousel" data-slide-to="2"></li>
-            </ol>
-        </div>
-        <div class="carousel-inner">
-            <div class="item active">
-                <div class="slide1"></div>
-                <div class="carousel-caption">
-                    <h4>Ornare pharetra elit mattis<br>lacus facilisi</h4>
-                    <p><a href="#" class="btn btn-primary btn-sm">EXPLORE DESTINATION</a></p>
-                </div>
-            </div>
-        </div>-->
+
+        -->
     <div class="container">
         <div class="row pt-5">
-            <div class="col-lg-6 col-md-6 col-sm-12 ">
+            <div class="col-lg-6 col-md-6 col-sm-12">
                 <p style="color: rgb(235, 164, 32);">#TRAVELTIP</p>
                 <h1>How to explore<br>Atlanta in 2 days?</h1>
                 <p>+ 1k view</p>
@@ -94,31 +104,31 @@
                 <p style="margin-top: 40%;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias, optio asperiores tenetur earum saepe consequuntur aut harum adipisci porro rerum assumenda quas possimus accusantium, repellendus enim nesciunt fugit vel dicta?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti maiores amet iure expedita eius consequuntur veniam, quod culpa rerum vitae laboriosam repudiandae, debitis, harum suscipit ipsa praesentium ea quis sapiente?</p><br>
                 <a href="#" class="btn btn-default btn-sm" role="button"><b>READ MORE</b></a>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 ">
-                <img src="city.png">
+            <div class="col">
+                <img class="img-fluid" src="city.png" style="max-width: 100%; height: auto;">
             </div>
         </div>
-        <div class="row pt-5">
+        <div class="row pt-5"><!--col-->
             <div class="col-lg-3 col-md-3 col-sm-12 p-4">
-                    <img src="flower.png">
-                    <div class="carousel-caption">
+                    <img class="img-fluid" src="flower.png" style="max-width: 100%; height: auto;">
+                    <div class="carousel-caption" >
                         <h3>Garden</h3>
                     </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12 p-4">
-                <img src="water_fall.png">
+                <img class="img-fluid" src="water_fall.png" style="max-width: 100%; height: auto;">
                 <div class="carousel-caption">
                     <h3>Water Fall</h3>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12 p-4">
-                <img src="mountain.png">
+                <img class="img-fluid" src="mountain.png" style="max-width: 100%; height: auto;">
                 <div class="carousel-caption">
                     <h3>Mountain</h3>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12 p-4">
-                <img src="beach.png">
+                <img class="img-fluid" src="beach.png" style="max-width: 100%; height: auto; position: relative;">
                 <div class="carousel-caption">
                     <h3>Beach</h3>
                 </div>
@@ -134,11 +144,11 @@
         </div>
         <div class="row pt-5">
             <div class="row pt-5">
-                <div class="col-lg-4 col-md-4 col-sm-12" style="width: 40%;">
-                    <img src="london.png">
+                <div class="col-lg-8 col-md-8 col-sm-12">
+                    <img class="img-fluid" src="london.png" style="max-width: 100%; height: auto;">
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-12">
-                    <img src="califonia.png">
+                <div class="col-lg-2 col-md-2 col-sm-12 pl-4 pt-5">
+                    <img class="img-fluid" src="califonia.png" style="max-width: 100%; height: auto;">
                 </div>
             </div>
         </div>
@@ -163,17 +173,17 @@
     </div>
     <footer class="page-footer pt-5">
         <div class="jumbotron foot">
-            <div class="float-lg-left float-md-left pl-5 copyright">
+            <div class="float-lg-center float-md-center copyright">
                 <p>copyright Budu</p>
             </div>
-            <div class="float-lg-right float-md-left">
+            <!--<div class="float-lg-right float-md-left">
                 <ul class="link" style="display: flex;">
                     <li><a href="#">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Stories</a></li>
                     <li><a href="#">Books</a></li>
                     <li><a href="#">Contact</a></li>
-                </ul>
+                </ul>-->
             </div>
         </div>
     </footer>
@@ -183,5 +193,6 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
