--- a/index.html
+++ b/index.html
@@ -156,7 +156,14 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <h4>Share your story</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil nisi, iusto veritatis esse, nesciunt debitis eligendi dolores possimus provident consectetur voluptas voluptatum eveniet blanditiis. Blanditiis sequi dicta aut unde alias?</p>
-                <img src="Screenshot (7).png">
+
+                <!--Google map-->
+        <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
+            <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+                style="border:0" allowfullscreen></iframe>
+        </div>
+  
+  <!--Google Maps-->
         </div>
         <div class="row pt-5">
             <div class="col-lg-4 col-md-4 col-sm-12">
