--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="overhead_bridge.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src=".." class="d-block w-100" alt="...">
+            <img src="overhead_bridge.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -110,27 +110,28 @@
         </div>
         <div class="row pt-5"><!--col-->
             <div class="col-lg-3 col-md-3 col-sm-12 p-4">
+                <div class="container image">
                     <img class="img-fluid" src="flower.png" style="max-width: 100%; height: auto;">
-                    <div class="carousel-caption" >
-                        <h3>Garden</h3>
-                    </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-12 p-4">
-                <img class="img-fluid" src="water_fall.png" style="max-width: 100%; height: auto;">
-                <div class="carousel-caption">
-                    <h3>Water Fall</h3>
+                    <div class="centered"><h4>Garden</h4></div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12 p-4">
-                <img class="img-fluid" src="mountain.png" style="max-width: 100%; height: auto;">
-                <div class="carousel-caption">
-                    <h3>Mountain</h3>
+                <div class="container image">    
+                    <img class="img-fluid" src="water_fall.png" style="max-width: 100%; height: auto;">
+                    <div class="centered"><h4>Water Fall</h4></div>
+                    <button class="btn"><b>READ MORE</b></button>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12 p-4">
-                <img class="img-fluid" src="beach.png" style="max-width: 100%; height: auto; position: relative;">
-                <div class="carousel-caption">
-                    <h3>Beach</h3>
+                <div class="container image">    
+                    <img class="img-fluid" src="mountain.png" style="max-width: 100%; height: auto;">
+                    <div class="centered"><h4>Mountain</h4></div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-12 p-4">
+                <div class="container image">
+                    <img class="img-fluid" src="beach.png" style="max-width: 100%; height: auto; position: relative;">
+                    <div class="centered"><h4>Beach</h4></div>
                 </div>
             </div>
         </div>
@@ -178,10 +179,9 @@
             </div>
         </div>
     </div>
-    <footer class="page-footer pt-5">
-        <div class="jumbotron foot">
-            <div class="float-lg-center float-md-center copyright">
-                <p>copyright Budu</p>
+    <footer class="page-footer">
+            <div class="float-left copyright">
+                <p style="color: white;">copyright Budu</p>
             </div>
             <!--<div class="float-lg-right float-md-left">
                 <ul class="link" style="display: flex;">
@@ -192,7 +192,6 @@
                     <li><a href="#">Contact</a></li>
                 </ul>-->
             </div>
-        </div>
     </footer>
 
 
