--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="overhead_bridge.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="centered">
                 <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
                 <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
                 <a href="#" class="btn btn-default btn-sm" role="button"><b>EXPLORE DESTINATION</b></a>
@@ -57,16 +57,18 @@
           </div>
           <div class="carousel-item">
             <img src="overhead_bridge.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="centered">
+                <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
+                <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
+                <a href="#" class="btn btn-default btn-sm" role="button"><b>EXPLORE DESTINATION</b></a>
             </div>
           </div>
           <div class="carousel-item">
             <img src="overhead_bridge.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            <div class="centered">
+                <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
+                <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
+                <a href="#" class="btn btn-default btn-sm" role="button"><b>EXPLORE DESTINATION</b></a>
             </div>
           </div>
         </div>
@@ -96,12 +98,14 @@
         -->
     <div class="container">
         <div class="row pt-5">
-            <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="col">
                 <p style="color: rgb(235, 164, 32);">#TRAVELTIP</p>
                 <h1>How to explore<br>Atlanta in 2 days?</h1>
                 <p>+ 1k view</p>
 
-                <p style="margin-top: 40%;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias, optio asperiores tenetur earum saepe consequuntur aut harum adipisci porro rerum assumenda quas possimus accusantium, repellendus enim nesciunt fugit vel dicta?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti maiores amet iure expedita eius consequuntur veniam, quod culpa rerum vitae laboriosam repudiandae, debitis, harum suscipit ipsa praesentium ea quis sapiente?</p><br>
+                <!--style="margin-top: 40%;"-->
+
+                <p >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias, optio asperiores tenetur earum saepe consequuntur aut harum adipisci porro rerum assumenda quas possimus accusantium, repellendus enim nesciunt fugit vel dicta?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti maiores amet iure expedita eius consequuntur veniam, quod culpa rerum vitae laboriosam repudiandae, debitis, harum suscipit ipsa praesentium ea quis sapiente?</p><br>
                 <a href="#" class="btn btn-default btn-sm" role="button"><b>READ MORE</b></a>
             </div>
             <div class="col">
@@ -119,7 +123,7 @@
                 <div class="container image">    
                     <img class="img-fluid" src="water_fall.png" style="max-width: 100%; height: auto;">
                     <div class="centered"><h4>Water Fall</h4></div>
-                    <button class="btn"><b>READ MORE</b></button>
+                    <button class="bt"><b>READ MORE</b></button>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12 p-4">
@@ -136,22 +140,19 @@
             </div>
         </div>
         <div class="row pt-5">
-            <div class="col-lg-6 col-md-6 col-sm-12">
-                <h1>Enjoy an exciting<br>your trip</h1>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12">
-                <a href="#" class="btn btn-default btn-sm ml-10 mt-10" role="button">VIEW ALL</a>
-            </div>
-        </div>
-        <div class="row pt-5">
-            <div class="row pt-5">
-                <div class="col-lg-8 col-md-8 col-sm-12">
-                    <img class="img-fluid" src="london.png" style="max-width: 100%; height: auto;">
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-12 pl-4 pt-5">
-                    <img class="img-fluid" src="califonia.png" style="max-width: 100%; height: auto;">
+            <div class="col">
+                <h1>Enjoy an exciting<br>your trip</h1><br>
+                <div class="container image">
+                    <img class="img-fluid" src="london.png" style="width: 100%; height: auto; position: relative;">
+                    <div class="bottom-left"><h5>London</h5><br><P>+1k visitor</P></div>
+                    <div class="bottom-right"><P>$250,000</P></div>
                 </div>
             </div>
+                
+                <div class="col">
+                    <a href="#" class="btn btn-default btn-sm pt-10" role="button">VIEW ALL</a><br>
+                    <img class="img-fluid pt-5" src="califonia.png" style="max-width: 100%; height: auto;">
+                </div>
         </div>
         <div class="row share pt-5">
             <div class="col-lg-12 col-md-12 col-sm-12">
@@ -193,6 +194,32 @@
                 </ul>-->
             </div>
     </footer>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand" href="#"><span style="color: rgb(235, 164, 32);">Zu</span>Travel</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Stories</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Book</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
 
 
