little update on responsiveness

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="col">
                 <h1 style="padding-bottom: 2px;">Enjoy an<br>exciting<br>your trip</h1><br>
                 <div class="container image">
-                    <img class="img-fluid london" src="london.png" style="width: 100%; position: relative;">
+                    <img class="img-fluid london" src="london1.png" style="width: 100%; position: relative;">
                     <div class="bottom-left"><h5>London</h5><br><P>+1k visitor<br>$250,000</P></div>
                     <div class="overlay"></div>
                 </div>
@@ -202,24 +202,49 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil nisi, iusto veritatis esse, nesciunt debitis eligendi dolores possimus provident consectetur voluptas voluptatum eveniet blanditiis. Blanditiis sequi dicta aut unde alias?</p>
 
                 <!--Google map-->
-        <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
+        <div id="map-container-google-1" class="z-depth-1-half map-container pt-5" style="height: 500px">
             <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
                 style="border:0" allowfullscreen></iframe>
         </div>
   
   <!--Google Maps-->
         </div>
-        <div class="row pt-5">
-            <div class="col">
+        <!--Fifth section-->
+        <!--For larger screen-->
+        <div class="row pt-5 six">
+            <div class="col-lg-4 col-md-4">
                 <h1 style="text-align: left;">What the final<br>word</h1>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <img src="girl.png">
             </div>
-            <div class="col">
+            <div class="col-lg4 col-md-4">
                 <p style="text-align: left;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa rerum at omnis numquam, obcaecati neque commodi non dolorum est nihil maxime quaerat eaque perferendis, eum fugit? Perferendis soluta velit eos. <br><br><b>Bill Precious</b><br>Visitor</p>
             </div>
         </div>
+
+        <!--For smaller screen-->
+        <div class="row pt-5 six6">
+            <div class="col-sm-12 pt-5">
+            <div class="container">
+                <div class="row pl-4">
+                <h1 style="text-align: left;">What the<br>final word</h1>
+                </div>
+                <div class="row pl-4 pt-5">
+                <p style="text-align: left;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa rerum at omnis numquam, obcaecati neque commodi non dolorum est nihil maxime quaerat eaque perferendis, eum fugit? Perferendis soluta velit eos.</p>
+                </div>
+                <div class="row pl-3">
+                <div class="col-4 ">
+                    <p><img src="girl1.png">
+                </div>
+                <div class="col-8" style="text-align:left;">
+                    <b>Bill Precious</b><br>Visitor</p>
+                </div>
+                </div>
+            </div>
+            </div>
+        </div>
+
     </div>
     <div class="page-footer font-small grey">
             <div class="footer-copyright text-center py-3">
