--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </form>
         </div>
       </nav>
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide x" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -81,6 +81,50 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+
+      <!--For smaller screen-->
+      <div id="carouselExampleCaptions" class="carousel slide x1" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="bridge.png" class="d-block w-100" alt="...">
+            <div class="centered">
+                <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
+                <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
+                <a href="#" class="btn btn-default btn-sm" role="button"><b>EXPLORE DESTINATION</b></a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="bridge.png" class="d-block w-100" alt="...">
+            <div class="centered">
+                <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
+                <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
+                <a href="#" class="btn btn-default btn-sm" role="button"><b>EXPLORE DESTINATION</b></a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="bridge.png" class="d-block w-100" alt="...">
+            <div class="centered">
+                <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
+                <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
+                <a href="#" class="btn btn-default btn-sm" role="button"><b>EXPLORE DESTINATION</b></a>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
 
 
     <!--
