--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </form>
         </div>
       </nav>
-    <div id="carouselExampleCaptions" class="carousel slide x" data-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide xoxo" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -80,10 +80,10 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div>
+    </div>
 
       <!--For smaller screen-->
-      <div id="carouselExampleCaptions" class="carousel slide x1" data-ride="carousel">
+      <div id="carouselExampleCaptions" class="carousel slide xoxo1" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
