--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <div class="container image">    
                     <img class="img-fluid" src="water_fall.png" style="max-width: 100%; height: auto;">
                     <div class="centered"><h4>Water Fall</h4></div>
-                    <button class="bt"><b>READ MORE</b></button>
+                    <button class="btn bt"><b>READ MORE</b></button>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12 p-4">
