--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="overhead_bridge.png" class="d-block w-100" alt="...">
+            <img src="./image/overhead_bridge.png" class="d-block w-100" alt="...">
             <div class="centered">
                 <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
                 <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="overhead_bridge.png" class="d-block w-100" alt="...">
+            <img src="./image/overhead_bridge.png" class="d-block w-100" alt="...">
             <div class="centered">
                 <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
                 <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
@@ -64,7 +64,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="overhead_bridge.png" class="d-block w-100" alt="...">
+            <img src="./image/overhead_bridge.png" class="d-block w-100" alt="...">
             <div class="centered">
                 <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
                 <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
@@ -91,7 +91,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="bridge.png" class="d-block w-100" alt="...">
+            <img src="./image/bridge.png" class="d-block w-100" alt="...">
             <div class="centered">
                 <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
                 <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
@@ -99,7 +99,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="bridge.png" class="d-block w-100" alt="...">
+            <img src="./image/bridge.png" class="d-block w-100" alt="...">
             <div class="centered">
                 <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
                 <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
@@ -107,7 +107,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="bridge.png" class="d-block w-100" alt="...">
+            <img src="./image/bridge.png" class="d-block w-100" alt="...">
             <div class="centered">
                 <p style="color: rgb(235, 164, 32);">Wonderful Mill valley, USA</p>
                 <h3>Ornare pharetra elit mattis<br>lacus facilisi.</h3><br>
@@ -156,7 +156,7 @@
                 <a href="#" class="btn btn-default btn-sm pd-3" role="button"><b>READ MORE</b></a>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
-                <img class="img-fluid" src="city.png" style="max-width: 100%; height: auto;">
+                <img class="img-fluid" src="./image/city.png" style="max-width: 100%; height: auto;">
             </div>
         </div>
         <!--For smaller screen-->
@@ -166,7 +166,7 @@
                 <h1>How to<br>explore<br>Atlanta in<br> 2 days?</h1>
                 <p>+ 1k view</p>
 
-                <img class="img-fluid" src="city.png" style="max-width: 100%; height: auto;">
+                <img class="img-fluid" src="./image/city.png" style="max-width: 100%; height: auto;">
 
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias, optio asperiores tenetur earum saepe consequuntur aut harum adipisci porro rerum assumenda quas possimus accusantium, repellendus enim nesciunt fugit vel dicta?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti maiores amet iure expedita eius consequuntur veniam, quod culpa rerum vitae laboriosam repudiandae, debitis, harum suscipit ipsa praesentium ea quis sapiente?</p><br>
                 <a href="#" class="btn btn-default btn-sm" role="button"><b>READ MORE</b></a>
@@ -178,26 +178,26 @@
         <div class="row pt-5 wrapper">
             <div class="col-lg-3 col-md-3 col-sm-12 p-4 three1">
                 <div class="container image">
-                    <img class="img-fluid" src="flower.png" style="max-width: 100%; height: auto;">
+                    <img class="img-fluid" src="./image/flower.png" style="max-width: 100%; height: auto;">
                     <div class="centered"><h4>Garden</h4></div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12 p-4 three2">
                 <div class="container image">    
-                    <img class="img-fluid" src="water_fall.png" style="max-width: 100%; height: auto;">
+                    <img class="img-fluid" src="./image/water_fall.png" style="max-width: 100%; height: auto;">
                     <div class="centered"><h4>Water Fall</h4></div>
                     <button class="btn bt"><b>READ MORE</b></button>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12 p-4">
                 <div class="container image">    
-                    <img class="img-fluid" src="mountain.png" style="max-width: 100%; height: auto;">
+                    <img class="img-fluid" src="./image/mountain.png" style="max-width: 100%; height: auto;">
                     <div class="centered"><h4>Mountain</h4></div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12 p-4">
                 <div class="container image">
-                    <img class="img-fluid" src="beach.png" style="max-width: 100%; height: auto; position: relative;">
+                    <img class="img-fluid" src="./image/beach.png" style="max-width: 100%; height: auto; position: relative;">
                     <div class="centered"><h4>Beach</h4></div>
                 </div>
             </div>
@@ -210,7 +210,7 @@
             <div class="col-lg-8 col-md-8">
                 <h1>Enjoy an exciting<br>your trip</h1><br>
                 <div class="container image">
-                    <img class="img-fluid" src="london.png" style="width: 100%; height: 500%; position: relative;">
+                    <img class="img-fluid" src="./image/london.png" style="width: 100%; height: 500%; position: relative;">
                     <div class="bottom-left"><h5>London</h5><br><P>+1k visitor</P></div>
                     <div class="bottom-right"><P>$250,000</P></div>
                     <div class="overlay"></div>
@@ -219,7 +219,7 @@
                 
                 <div class="col mt-5">
                     <a href="#" class="btn btn-default btn-sm pt-10" role="button">VIEW ALL</a><br>
-                    <img class="img-fluid pt-5" src="califonia.png" style="max-width: 100%; height: auto;">
+                    <img class="img-fluid pt-5" src="./image/califonia.png" style="max-width: 100%; height: auto;">
                 </div>
         </div>
 
@@ -228,7 +228,7 @@
             <div class="col">
                 <h1 style="padding-bottom: 2px;">Enjoy an<br>exciting<br>your trip</h1><br>
                 <div class="container image">
-                    <img class="img-fluid london" src="london1.png" style="width: 100%; position: relative;">
+                    <img class="img-fluid london" src="./image/london1.png" style="width: 100%; position: relative;">
                     <div class="bottom-left"><h5>London</h5><br><P>+1k visitor<br>$250,000</P></div>
                     <div class="overlay"></div>
                 </div>
@@ -260,7 +260,7 @@
                 <h1 style="text-align: left;">What the final<br>word</h1>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
-                <img src="girl.png">
+                <img src="./image/girl.png">
             </div>
             <div class="col-lg4 col-md-4">
                 <p style="text-align: left;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa rerum at omnis numquam, obcaecati neque commodi non dolorum est nihil maxime quaerat eaque perferendis, eum fugit? Perferendis soluta velit eos. <br><br><b>Bill Precious</b><br>Visitor</p>
@@ -279,7 +279,7 @@
                 </div>
                 <div class="row pl-3">
                 <div class="col-4 ">
-                    <p><img src="girl1.png">
+                    <p><img src="./image/girl1.png">
                 </div>
                 <div class="col-8" style="text-align:left;">
                     <b>Bill Precious</b><br>Visitor</p>
@@ -290,11 +290,13 @@
         </div>
 
     </div>
+    <footer>
     <div class="page-footer font-small grey">
             <div class="footer-copyright text-center py-3">
                 <p style="color: white;">copyright <span style="color: rgb(235, 164, 32);">Zu</span>Travel</p>
             </div>
     </div>
+  </footer>
 
 
 
